--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4779,12 +4779,19 @@ However, most authors do not need detailed understanding of the algorithms since
             <tr>
               <td><a href="#timer" class="role-reference"><code>timer</code></a></td>
               <td>Required</td>
-              <td>guidance</td>
+              <td>Use <code>aria-labelledby</code> if a visible label is present, otherwise use <code>aria-label</code>.</td>
             </tr>
             <tr>
               <td><a href="#toolbar" class="role-reference"><code>toolbar</code></a></td>
-              <td>namerequired</td>
-              <td>guidance</td>
+              <td>Recommended</td>
+              <td>
+                <ul>
+                  <li>If there are more than one <code>toolbar</code> elements on the page, naming is required.</li>
+                  <li>Helps assistive technology users to understand the purpose of the toolbar, even when there is only one toolbar on the page.</li>
+                  <li>Use <code>aria-labelledby</code> if a visible label is present, otherwise use <code>aria-label</code>.</li>
+                  <li>See the <a href="#toolbar">Toolbar Pattern</a>.</li>
+                </ul>
+              </td>
             </tr>
             <tr>
               <td><a href="#tooltip" class="role-reference"><code>tooltip</code></a></td>
