--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3696,6 +3696,11 @@
   <section id="names_and_descriptions">
     <h2>Providing Accessible Names and Descriptions</h2>
     <p>
+      <strong>Note:</strong> This is a draft of a new section.
+      Please provide feedback in
+      <a href="https://github.com/w3c/aria-practices/issues/1050">issue 1050.</a>
+    </p>
+    <p>
       Providing elements with accessible names, and where appropriate, accessible descriptions is one of the most fundamental and important responsibilities authors have when developing accessible web experiences.
       While doing so is straightforward for most elements, technical mistakes that can have devastating impacts on users of assistive technologies are easy to make and unfortunately common.
       To help authors provide effective and reliable accessible names and descriptions, this section explains their purpose, when authors need to provide them, how browsers assemble them, and rules for coding and composing them.
