--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4487,7 +4487,7 @@ However, most authors do not need detailed understanding of the algorithms since
               <td>
                 <ul>
                   <li>If the <code>math</code> element has only presentational children and the accessible name is intended to convey the mathematical expression, use <code>aria-label</code> to provide a string that represents the expression.</li>
-                  <li>If the <code>math</code> element contains navigable content that conveys the mathematical expression and a visible label for the expression is present, use <code>aria-labelledby</code>.</li> 
+                  <li>If the <code>math</code> element contains navigable content that conveys the mathematical expression and a visible label for the expression is present, use <code>aria-labelledby</code>.</li>
                   <li>Otherwise, use a<code>aria-label</code> to name the expression, e.g., <code>aria-label="Pythagorean Theorem"</code>.</li>
                 </ul>
               </td>
@@ -4635,7 +4635,7 @@ However, most authors do not need detailed understanding of the algorithms since
                 <ul>
                   <li>Helps screen reader users understand the context and purpose of the landmark.</li>
                   <li>Use <code>aria-labelledby</code> if a visible label is present, otherwise use <code>aria-label</code>.</li>
-                  <li>See the <a href="#aria_lh_region">Region Landmark Role</a>.</li>
+                  <li>See the <a href="#aria_lh_region">Region Landmark</a> section.</li>
                 </ul>
             </td>
             </tr>
@@ -4685,7 +4685,7 @@ However, most authors do not need detailed understanding of the algorithms since
                 <ul>
                   <li>Helps screen reader users understand the context and purpose of the search landmark.</li>
                   <li>Named using <code>aria-labelledby</code> if a visible label is present, otherwise with <code>aria-label</code>.</li>
-                  <li>See the <a href="aria_lh_search">Search Landmark Role</a>.</li>
+                  <li>See the <a href="aria_lh_search">Search Landmark</a> section.</li>
                 </ul>
               </td>
             </tr>
@@ -4784,7 +4784,7 @@ However, most authors do not need detailed understanding of the algorithms since
                 <ul>
                   <li>Helps screen reader users understand the context and purpose of the tablist.</li>
                   <li>Use <code>aria-labelledby</code> if a visible label is present, otherwise use <code>aria-label</code>.</li>
-                  <li>See the <a href="#carousel">Carousel Design Pattenr</a> and <a href="#tabpanel">Tabs Design Pattern</a>.</li>
+                  <li>See the <a href="#carousel">Carousel Design Pattern</a> and <a href="#tabpanel">Tabs Design Pattern</a>.</li>
                 </ul>
               </td>
             </tr>
@@ -4794,7 +4794,7 @@ However, most authors do not need detailed understanding of the algorithms since
               <td>
                 <ul>
                   <li>Use <code>aria-labelledby</code> pointing to the <code>tab</code> element that controls the <code>tabpanel</code>.</li>
-                  <li>See the <a href="#carousel">Carousel Design Pattenr</a> and <a href="#tabpanel">Tabs Design Pattern</a>.</li>
+                  <li>See the <a href="#carousel">Carousel Design Pattern</a> and <a href="#tabpanel">Tabs Design Pattern</a>.</li>
                 </ul>
               </td>
             </tr>
